# cpp-project-template

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  Dockerfile  Jenkinsfile  Makefile  README.md
.github/workflows/: main.yml
app/: CMakeLists.txt  main.cpp
cmake/: clang-format.cmake  clang-tidy.cmake
lib/division/: CMakeLists.txt  division.h
src/: CMakeLists.txt
src/division/: division.cpp  division.h
tests/: CMakeLists.txt  main.cpp
